--- a/services/airline-flight-service/application.yml
+++ b/services/airline-flight-service/application.yml
@@ -1,16 +1,26 @@
-# Global
 spring:
-  cloud:
-    config:
-      uri: http://config-server:8899  # Config Server address
-    bus:
-      enabled: true                   
+  application:
+    name: airline-flight-service
+  profiles:
+    active: dev
+  datasource:
+    url: jdbc:mysql://localhost:3306/flight_db?useSSL=false
+    username: dev_user
+    password: dev_pass
+  jpa:
+    hibernate:
+      ddl-auto: update
 
-logging:
-  level:
-    root: INFO
+server:
+  port: 8081
 
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+    registry-fetch-interval-seconds: 5  # 快速获取注册表更新
+
+logging:
+  level:
+    root: INFO
+    org.hibernate.SQL: DEBUG  # 开发环境显示 SQL 日志
