--- a/services/airline-flight-service/application.yml
+++ b/services/airline-flight-service/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: airline-flight-service
   profiles:
-    active: dev
+    active: 
   datasource:
     url: jdbc:mysql://localhost:3306/flight_db?useSSL=false
     username: dev_user
