--- a/services/airline-payment-service/application.yml
+++ b/services/airline-payment-service/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: airline-payment-service-testing
+    name: airline-payment-service
   datasource:
     url: jdbc:mysql://localhost:3306/payment_db?useSSL=false
     username: payment_user
@@ -12,7 +12,7 @@ spring:
     password: rabbit_pass
 
 server:
-  port: 8084
+  port: 8083
 
 eureka:
   client:
